org.mmisw.vine Vocabulary INtegration Environment II
Carlos Rueda - MMI / MBARI

ChangeLog

2009-01-06
	- Added new logo.
	- Using SuggestBox to select a vocabulary into the working list.
	- Improved dialog dispatch for selecting and loading a vocabulary into the working list.
	- OntologyInfo: transient code to identify the vocab only on the client side
	- Search now done on selected vocabs; also the loading.gif image is shown as a progress
	  notification while searching.
	- Search: Using List<EntityInfo> as preparation for showing associated information for
	  found entities.
	  TODO: allow selection of entities to show the info.
	
2008-12-31
	- Various additions
	
	
2008-12-30
	- Started populating the "term" sections according to the selected vocabs
	  on each side and the search string. There is a preliminary core.Util class
	  with some Jena-based stuff to obtain information about a selected ontology.
	- Search operation is now performed on the client side: required info about
	  each selected (working) ontology is obtained from the server and stored in
	  the corresponding OntologyInfo object.
	
2008-12-29
	- List of vocabularies now obtained from the registry (via the Ont service).
	- User can now select the working vocabularies.  Prefixes A, B, etc. are
	  incrementally assigned to the working ontologies. Note that 2 or more
	  vocabularies can be specified.
	- Toggle buttons (identified with those prefixes) are to be used in the 
	  search section of each side.
	  
		
2008-12-02
	- Included GWT code from a preliminary exercise to emulate standalone GUI.
	  I will use this as a basis to define the core functionality.
	- Current set of relations is fixed but of course the new design should
	  allow a more flexible mechanism to specify the relations and associated
	  information (icons, rules, tooltips, etc).
	  
	- First section: selection of working ontologies, identified by A, B, ...