@@ -1,5 +1,6 @@
 package org.mmisw.vine.gwt.client;
 
+import java.util.ArrayList;
 import java.util.List;
 
 import org.mmisw.vine.gwt.client.rpc.EntityInfo;
@@ -8,19 +9,29 @@ import com.google.gwt.user.client.ui.CellPanel;
 import com.google.gwt.user.client.ui.CheckBox;
 import com.google.gwt.user.client.ui.ClickListener;
 import com.google.gwt.user.client.ui.DecoratorPanel;
+import com.google.gwt.user.client.ui.FocusListener;
 import com.google.gwt.user.client.ui.HTML;
 import com.google.gwt.user.client.ui.HorizontalPanel;
 import com.google.gwt.user.client.ui.PushButton;
 import com.google.gwt.user.client.ui.ScrollPanel;
+import com.google.gwt.user.client.ui.TextBox;
 import com.google.gwt.user.client.ui.VerticalPanel;
 import com.google.gwt.user.client.ui.Widget;
 
-public class ResultsForm extends VerticalPanel {
+/**
+ * The panel where the search results are displayed.
+ * 
+ * @author Carlos Rueda
+ */
+public class SearchResultsForm extends VerticalPanel {
 	
+	private ResourceViewer resourceViewer;
 	private int numElements;
 	private int numSelected;
 	
 	private HTML status = new HTML("Selected: " +numSelected+ " out of " +numElements+ " element(s)");
+	
+	private List<CheckBox> cbs;
 	
 	private CellPanel p2;
 	private ClickListener cl = new ClickListener() {
@@ -31,10 +42,27 @@ public class ResultsForm extends VerticalPanel {
 			updateStatus();
 		}
 	};
+
+	private FocusListener fl = new FocusListener() {
+
+		public void onFocus(Widget sender) {
+			TextBox comp = (TextBox) sender;
+			resourceViewer.update(comp.getText());  // TODO	
+		}
+
+		public void onLostFocus(Widget sender) {
+			// TODO Auto-generated method stub
+			
+		}
+	};
 	
-	ResultsForm() {
+	/**
+	 * @param resourceViewer 
+	 * 
+	 */
+	SearchResultsForm(ResourceViewer resourceViewer) {
 		super();
-		
+		this.resourceViewer = resourceViewer;
 		
 		CellPanel hp = new HorizontalPanel();
 		add(hp);
@@ -61,6 +89,8 @@ public class ResultsForm extends VerticalPanel {
 	    decPanel.setWidget(p);
 	    add(decPanel);
 
+	    cbs = new ArrayList<CheckBox>();
+	    
 	    p2 = new VerticalPanel();
 		ScrollPanel scroller = new ScrollPanel(p2);
 	    scroller.setSize("450px", "150px");
@@ -69,11 +99,10 @@ public class ResultsForm extends VerticalPanel {
 	}
 	
 	void updateAllNone(boolean selected) {
-		for ( int i = 0, c = p2.getWidgetCount(); i < c; i++ ) {
-			CheckBox cb = (CheckBox) p2.getWidget(i);
+		for ( CheckBox cb : cbs  ) {
 			cb.setChecked(selected);
 		}
-		numSelected = selected ? p2.getWidgetCount() : 0;
+		numSelected = selected ? cbs.size() : 0;
 		updateStatus();
 	}
 	
@@ -91,21 +120,33 @@ public class ResultsForm extends VerticalPanel {
 	public void updateEntities(List<EntityInfo> entities) {
 		// TODO dispatch checkBox for the terms
 		p2.clear();
+		cbs.clear();
 		
 //		final FlexTable flexTable = new FlexTable();
 //		FlexCellFormatter cellFormatter = flexTable.getFlexCellFormatter();
 //		cellFormatter.s
 		
 		for ( EntityInfo entity : entities ) {
-			String str = entity.getCode()+ ":" +entity.getLocalName();
+			String str = entity.getCode()+ ": <b>" +entity.getLocalName()+ "</b>";
 			
 			HorizontalPanel hp = new HorizontalPanel();
 			p2.add(hp);
 			hp.setTitle(entity.getLocalName());
 			
-			CheckBox cb = new CheckBox();
+			CheckBox cb = new CheckBox(str, true);
+			cb.setFocus(true);
+			cbs.add(cb);
 			hp.add(cb);
-			hp.add(new HTML(str));
+			
+			TextBox tb = new TextBox();
+			tb.setText(str);
+			tb.setReadOnly(true);
+			tb.addFocusListener(fl);
+			hp.add(tb);
+//			cb.addFocusListener(fl);
+
+//			HTML html = new HTML(str);
+//			hp.add(html);
 
 			cb.addClickListener(cl);
 			
