@@ -1,8 +1,13 @@
-org.mmisw.vine Vocabulary INtegration Environment II
+org.mmisw.vine - Web VINE
 Carlos Rueda - MMI / MBARI
 
 ChangeLog
 
+2009-04-01
+	- Resuming with some updates an preparing to show infor about select term in the
+	  search result panel.
+	  
+	  
 2009-01-06
 	- Added new logo.
 	- Using SuggestBox to select a vocabulary into the working list.
